Implementing Lifecycle Management (#453)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@1133 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Hive.Contracts/HiveServerMessages.resx
+++ b/sources/HeuristicLab.Hive.Contracts/HiveServerMessages.resx
@@ -228,4 +228,10 @@
   <data name="Communicator.UserNotLoggedIn" xml:space="preserve">
     <value>User is not logged in, you must login before sending Heartbeats</value>
   </data>
+  <data name="Communicator.JobIsNotBeenigCalculated" xml:space="preserve">
+    <value>There is no client registered to calculate this job</value>
+  </data>
+  <data name="Communicator.WrongClientForJob" xml:space="preserve">
+    <value>This client is not registered to calculate this job</value>
+  </data>
 </root>
