added shutdown button (#468)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@1145 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Hive.Client.Console/HiveClientConsole.resx
+++ b/sources/HeuristicLab.Hive.Client.Console/HiveClientConsole.resx
@@ -126,50 +126,53 @@
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABS
         CgAAAk1TRnQBSQFMAgEBAgEAAQQBAAEEAQABEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
-        AwABEAMAAQEBAAEgBgABECoAAUMCAQF0AVoCCQHxAxAB/wFiAgMB1AEgAgEBLCwAAUMCAQF0AVoCCQHx
-        AxAB/wFiAgMB1AEgAgEBLKQAAVgCCgHyAZMBagEQAf8BvwGBARAB/wG9AYABEAH/AboBfQEQAf8BuAF6
-        ARAB/wG2AXgBEAH/AUQBLQEQAf8BPQIBAWUcAAFYAgoB8gIQAaQB/wIQAdYB/wIQAdQB/wIQAdIB/wIQ
-        AdAB/wIQAc4B/wIQAUsB/wE9AgEBZZgAARoBFgEQAf8BxwGBARAB/wHDAYEBEAH/AbEBcgEQAf8BsQFy
-        ARAB/wGxAXIBEAH/AbEBcgEQAf8BswF0ARAB/wG2AXgBEAH/AbQBdQEQAf8BYQIFAeQUAAIQARsB/wIQ
-        AdwB/wIQAdkB/wIQAcoB/wIQAcoB/wIQAcoB/wIQAcoB/wIQAcsB/wIQAc4B/wIQAcwB/wFhAgUB5JAA
-        AxAB/wHLAYEBEAH/AbsBfgEQAf8BtgF4ARAB/wG2AXgBEAH/Ae4B3AHEBf8BvgGBAS0B/wG2AXgBEAH/
-        AbYBeAEQAf8BtgF4ARAB/wG0AXUBEAH/AUkCAgGGDAADEAH/AhAB4AH/AhAB0gH/AhABzgH/Aj0B1gH/
-        AhABzgH/AhABzgH/AhABzgH/AhMBzgH/AhABzgH/AhABzgH/AhABzAH/AUkCAgGGiAABLAIBAUIB0AGG
-        ARAB/wHHAYEBEAH/AboBfQEQAf8BugF9ARAB/wG6AX0BEAH/AdABnAFhBf8BugF9ARAB/wG6AX0BEAH/
-        AboBfQEQAf8BugF9ARAB/wG2AXgBEAH/AWQBPwEQAf8IAAEsAgEBQgIQAeQB/wIQAdwB/wIQAdIB/wKf
-        Ae0F/wJWAd4B/wIQAdIB/wL0Af0F/wITAdIB/wIQAdIB/wIQAc4B/wIQAW8B/4gAAxAB/wHSAYkBEAH/
-        Ab8BgQEQAf8BvwGBARAB/wG/AYEBEAH/Ab8BgQEQAf8B0wGfAWEF/wG/AYEBEAH/Ab8BgQEQAf8BvwGB
-        ARAB/wG/AYEBEAH/Ab4BgQEQAf8BtgF4ARAB/wE2AgEBVwQAAxAB/wIQAeUB/wIQAdYB/wIQAdYN/wL1
-        Af0J/wLiAfoB/wIQAdYB/wIQAdUB/wIQAc4B/wE2AgEBV4QAAVgBQAEQAf8B1AGMARAB/wHEAYEBEAH/
-        AcQBgQEQAf8BxAGBARAB/wHEAYEBEAH/AdcBpAFiBf8BxAGBARAB/wHEAYEBEAH/AcQBgQEQAf8BxAGB
-        ARAB/wHEAYEBEAH/AbgBegEQAf8BXgIHAewEAAIQAV4B/wIQAegB/wIQAdoB/wIQAdoB/wIQAdoR/wLi
-        AfoB/wIQAdoB/wIQAdoB/wIQAdoB/wIQAdAB/wFeAgcB7IQAAXgBVQEQAf8B1wGOARAB/wHJAYEBEAH/
-        AckBgQEQAf8ByQGBARAB/wHJAYEBEAn/AckBgQEQAf8ByQGBARAB/wHJAYEBEAH/AckBgQEQAf8ByQGB
-        ARAB/wG6AX0BEAH/AxAB/wQAAhABgQH/AhAB6QH/AhAB3gH/AhAB3gH/AhAB3gH/AvQB/Q3/AlYB5wH/
-        AhAB3gH/AhAB3gH/AhAB3gH/AhAB0gH/AxAB/4QAAWgBRgEQAf8B2QGRARAB/wHOAYMBEAH/Ac4BgwEQ
-        Af8BzgGDARAB/wHOAYMBEAH/Ac4BgwEQAf8B1wGcAUEB/wHOAYMBEAH/Ac4BgwEQAf8BzgGDARAB/wHO
-        AYMBEAH/Ac4BgwEQAf8BvQGAARAB/wE9AhAB+QQAARABFQFnAf8CEAHsAf8CEAHiAf8CEAHiAf8C9AH9
-        Ff8CVgHqAf8CEAHiAf8CEAHiAf8CEAHUAf8BPQIQAfmEAAETAREBEAH/AdsBlAEQAf8B0gGJARAB/wHS
-        AYkBEAH/AdIBiQEQAf8B0gGJARAB/wHSAYkBEAH/AesBywGQAf8B0gGJARAB/wHSAYkBEAH/AdIBiQEQ
-        Af8B0gGJARAB/wHEAYEBEAH/Ab8BgQEQAf8BUQICAZsEAAIQARMB/wIQAe0B/wIQAeYB/wIQAeUB/wL9
-        Af4F/wLiAfwB/wIQAeUJ/wKBAfEB/wIQAeUB/wIQAdoB/wIQAdYB/wFRAgIBm4QAAVgCAgGyAd4BmAEQ
-        Af8B2wGUARAB/wHXAY4BEAH/AdcBjgEQAf8B1wGOARAB/wH7AfYB6wX/AdcBjgEQAf8B1wGOARAB/wHX
-        AY4BEAH/AdYBjQEQAf8BxAGBARAB/wGpAXEBEAH/CAABWAICAbIBEAEaAe8B/wIQAe0B/wIQAekB/wIQ
-        AekB/wLhAfwB/wIQAekB/wIQAekB/wIQAekB/wKBAfMB/wIQAekB/wIQAegB/wIQAdoB/wEQARgBnQH/
-        jAABSgEvARAB/wHdAZcBEAH/AdsBlAEQAf8B2wGUARAB/wHbAZQBEAH/AdsBlAEQAf8B3AGXARYB/wHb
-        AZQBEAH/AdsBlAEQAf8B1QGMARAB/wHJAYEBEAH/AdEBiAEQAf8BKwIQAfwMAAIQAUQB/wIQAe8B/wIQ
-        Ae0B/wIQAe0B/wIQAe0B/wIQAe0B/wIQAe0B/wIQAe0B/wIQAe0B/wIQAegB/wIQAd4B/wEQASMB4gH/
-        ASsCEAH8jAABGQIBASEBkAFkARAB/wHfAZkBEAH/AdsBlAEQAf8B2QGRARAB/wHYAZABEAH/AdgBkAEQ
-        Af8B0wGKARAB/wHQAYYBEAH/Ac4BgwEQAf8B2gGSARAB/wEbARYBEAH/EAABGQIBASECEAGHAf8BEAEW
-        AfEB/wIQAe0B/wIQAewB/wIQAesB/wIQAesB/wIQAeYB/wIQAeQB/wIQAeIB/wEQAS0B5gH/AhABGgH/
-        lAABEgIBARYBNQEnARAB/wHSAYkBEAH/AeIBnQEQAf8B2QGRARAB/wHXAY4BEAH/AdUBjAEQAf8B4QGb
-        ARAB/wHOAYQBEAH/ASACEAH+GAABEgIBARYCEAE0Af8BEAEWAdMB/wEQAScB9AH/AhAB7AH/AhAB6QH/
-        ARABEQHoAf8BEAEvAfAB/wIQAcwB/wEgAhAB/qAAAUYCAQF9AxAB/wFhAUgBEAH/AYEBYQEQAf8BQgEz
-        ARAB/wEgAhAB/gEUAgEBGiQAAUYCAQF9AxAB/wIQAWQB/wIQAYEB/wIQAUQB/wEgAhAB/gEUAgEBGv8A
+        AwABEAMAAQEBAAEgBgABECoAAUMCAQF0AVsCCQHxAxEB/wFiAgMB1AEgAgEBLCwAAUMCAQF0AVsCCQHx
+        AxEB/wFiAgMB1AEgAgEBLKQAAVsCCgHyAZMBawERAf8BvwGBAREB/wG9AYEBEQH/AboBfgERAf8BuAF7
+        AREB/wG2AXkBEQH/AUUBLgERAf8BPQIBAWUcAAFbAgoB8gIRAaQB/wIRAdYB/wIRAdQB/wIRAdIB/wIR
+        AdAB/wIRAc4B/wIRAUwB/wE9AgEBZZgAARsBFwERAf8BxwGBAREB/wHDAYEBEQH/AbEBcwERAf8BsQFz
+        AREB/wGxAXMBEQH/AbEBcwERAf8BswF1AREB/wG2AXkBEQH/AbQBdgERAf8BYgIFAeQUAAIRARwB/wIR
+        AdwB/wIRAdkB/wIRAcoB/wIRAcoB/wIRAcoB/wIRAcoB/wIRAcsB/wIRAc4B/wIRAcwB/wFiAgUB5JAA
+        AxEB/wHLAYEBEQH/AbsBfwERAf8BtgF5AREB/wG2AXkBEQH/Ae4B3AHEBf8BvgGBAS4B/wG2AXkBEQH/
+        AbYBeQERAf8BtgF5AREB/wG0AXYBEQH/AUkCAgGGDAADEQH/AhEB4AH/AhEB0gH/AhEBzgH/Aj4B1gH/
+        AhEBzgH/AhEBzgH/AhEBzgH/AhQBzgH/AhEBzgH/AhEBzgH/AhEBzAH/AUkCAgGGiAABLAIBAUIB0AGG
+        AREB/wHHAYEBEQH/AboBfgERAf8BugF+AREB/wG6AX4BEQH/AdABnAFiBf8BugF+AREB/wG6AX4BEQH/
+        AboBfgERAf8BugF+AREB/wG2AXkBEQH/AWUBQAERAf8IAAEsAgEBQgIRAeQB/wIRAdwB/wIRAdIB/wKf
+        Ae0F/wJXAd4B/wIRAdIB/wL0Af0F/wIUAdIB/wIRAdIB/wIRAc4B/wIRAXAB/4gAAxEB/wHSAYkBEQH/
+        Ab8BgQERAf8BvwGBAREB/wG/AYEBEQH/Ab8BgQERAf8B0wGfAWIF/wG/AYEBEQH/Ab8BgQERAf8BvwGB
+        AREB/wG/AYEBEQH/Ab4BgQERAf8BtgF5AREB/wE2AgEBVwQAAxEB/wIRAeUB/wIRAdYB/wIRAdYN/wL1
+        Af0J/wLiAfoB/wIRAdYB/wIRAdUB/wIRAc4B/wE2AgEBV4QAAVkBQQERAf8B1AGMAREB/wHEAYEBEQH/
+        AcQBgQERAf8BxAGBAREB/wHEAYEBEQH/AdcBpAFjBf8BxAGBAREB/wHEAYEBEQH/AcQBgQERAf8BxAGB
+        AREB/wHEAYEBEQH/AbgBewERAf8BYAIHAewEAAIRAV8B/wIRAegB/wIRAdoB/wIRAdoB/wIRAdoR/wLi
+        AfoB/wIRAdoB/wIRAdoB/wIRAdoB/wIRAdAB/wFgAgcB7IQAAXkBVgERAf8B1wGOAREB/wHJAYEBEQH/
+        AckBgQERAf8ByQGBAREB/wHJAYEBEQn/AckBgQERAf8ByQGBAREB/wHJAYEBEQH/AckBgQERAf8ByQGB
+        AREB/wG6AX4BEQH/AxEB/wQAAhEBgQH/AhEB6QH/AhEB3gH/AhEB3gH/AhEB3gH/AvQB/Q3/AlcB5wH/
+        AhEB3gH/AhEB3gH/AhEB3gH/AhEB0gH/AxEB/4QAAWkBRwERAf8B2QGRAREB/wHOAYMBEQH/Ac4BgwER
+        Af8BzgGDAREB/wHOAYMBEQH/Ac4BgwERAf8B1wGcAUIB/wHOAYMBEQH/Ac4BgwERAf8BzgGDAREB/wHO
+        AYMBEQH/Ac4BgwERAf8BvQGBAREB/wFAAhEB+QQAAREBFgFoAf8CEQHsAf8CEQHiAf8CEQHiAf8C9AH9
+        Ff8CVwHqAf8CEQHiAf8CEQHiAf8CEQHUAf8BQAIRAfmEAAEUARIBEQH/AdsBlAERAf8B0gGJAREB/wHS
+        AYkBEQH/AdIBiQERAf8B0gGJAREB/wHSAYkBEQH/AesBywGQAf8B0gGJAREB/wHSAYkBEQH/AdIBiQER
+        Af8B0gGJAREB/wHEAYEBEQH/Ab8BgQERAf8BUQICAZsEAAIRARQB/wIRAe0B/wIRAeYB/wIRAeUB/wL9
+        Af4F/wLiAfwB/wIRAeUJ/wKBAfEB/wIRAeUB/wIRAdoB/wIRAdYB/wFRAgIBm4QAAVgCAgGyAd4BmAER
+        Af8B2wGUAREB/wHXAY4BEQH/AdcBjgERAf8B1wGOAREB/wH7AfYB6wX/AdcBjgERAf8B1wGOAREB/wHX
+        AY4BEQH/AdYBjQERAf8BxAGBAREB/wGpAXIBEQH/CAABWAICAbIBEQEbAe8B/wIRAe0B/wIRAekB/wIR
+        AekB/wLhAfwB/wIRAekB/wIRAekB/wIRAekB/wKBAfMB/wIRAekB/wIRAegB/wIRAdoB/wERARkBnQH/
+        jAABSwEwAREB/wHdAZcBEQH/AdsBlAERAf8B2wGUAREB/wHbAZQBEQH/AdsBlAERAf8B3AGXARcB/wHb
+        AZQBEQH/AdsBlAERAf8B1QGMAREB/wHJAYEBEQH/AdEBiAERAf8BLAIRAfwMAAIRAUUB/wIRAe8B/wIR
+        Ae0B/wIRAe0B/wIRAe0B/wIRAe0B/wIRAe0B/wIRAe0B/wIRAe0B/wIRAegB/wIRAd4B/wERASQB4gH/
+        ASwCEQH8jAABGQIBASEBkAFlAREB/wHfAZkBEQH/AdsBlAERAf8B2QGRAREB/wHYAZABEQH/AdgBkAER
+        Af8B0wGKAREB/wHQAYYBEQH/Ac4BgwERAf8B2gGSAREB/wEcARcBEQH/EAABGQIBASECEQGHAf8BEQEX
+        AfEB/wIRAe0B/wIRAewB/wIRAesB/wIRAesB/wIRAeYB/wIRAeQB/wIRAeIB/wERAS4B5gH/AhEBGwH/
+        lAABEgIBARYBNgEoAREB/wHSAYkBEQH/AeIBnQERAf8B2QGRAREB/wHXAY4BEQH/AdUBjAERAf8B4QGb
+        AREB/wHOAYQBEQH/ASICEQH+GAABEgIBARYCEQE1Af8BEQEXAdMB/wERASgB9AH/AhEB7AH/AhEB6QH/
+        AREBEgHoAf8BEQEwAfAB/wIRAcwB/wEiAhEB/qAAAUYCAQF9AxEB/wFiAUkBEQH/AYEBYgERAf8BQwE0
+        AREB/wEiAhEB/gEUAgEBGiQAAUYCAQF9AxEB/wIRAWUB/wIRAYEB/wIRAUUB/wEiAhEB/gEUAgEBGv8A
         kQABQgFNAT4HAAE+AwABKAMAAUADAAEQAwABAQEAAQEFAAGAFwAD/wEAAfwBHwH8AR8EAAHwAQcB8AEH
         BAAB4AEDAeABAwQAAcABAQHAAQEEAAGAAQEBgAEBBAABgAEAAYAFAAGAAQABgAUAAYABAAGABQABgAEA
         AYAFAAGAAQABgAUAAYABAQGAAQEEAAHAAQEBwAEBBAABwAEDAcABAwQAAeABBwHgAQcEAAH4AQ8B+AEP
         BAAE/wQACw==
 </value>
   </data>
+  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>46</value>
+  </metadata>
 </root>
