Implementing Lifecycle Management (#453)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@1170 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Hive.Contracts/HiveServerMessages.resx
+++ b/sources/HeuristicLab.Hive.Contracts/HiveServerMessages.resx
@@ -234,4 +234,7 @@
   <data name="Communicator.WrongClientForJob" xml:space="preserve">
     <value>This client is not registered to calculate this job</value>
   </data>
+  <data name="Job.JobResultSent" xml:space="preserve">
+    <value>Job Result sent successfully</value>
+  </data>
 </root>
