update recurrence UI (#468)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@1333 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Hive.Client.Console/HiveClientConsole.resx
+++ b/sources/HeuristicLab.Hive.Client.Console/HiveClientConsole.resx
@@ -126,46 +126,46 @@
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABS
         CgAAAk1TRnQBSQFMAgEBAgEAAQQBAAEEAQABEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
-        AwABEAMAAQEBAAEgBgABECoAAUMCAQF0AWYCCQHxAxkB/wFiAgMB1AEgAgEBLCwAAUMCAQF0AWYCCQHx
-        AxkB/wFiAgMB1AEgAgEBLKQAAWACCgHyAZMBcwEZAf8BvwGBARkB/wG9AYEBGQH/AboBgQEZAf8BuAGB
-        ARkB/wG2AYEBGQH/AU0BNgEZAf8BPQIBAWUcAAFgAgoB8gIZAaQB/wIZAdYB/wIZAdQB/wIZAdIB/wIZ
-        AdAB/wIZAc4B/wIZAVQB/wE9AgEBZZgAASMBHwEZAf8BxwGBARkB/wHDAYEBGQH/AbEBewEZAf8BsQF7
-        ARkB/wGxAXsBGQH/AbEBewEZAf8BswF9ARkB/wG2AYEBGQH/AbQBfgEZAf8BZAIFAeQUAAIZASQB/wIZ
-        AdwB/wIZAdkB/wIZAcoB/wIZAcoB/wIZAcoB/wIZAcoB/wIZAcsB/wIZAc4B/wIZAcwB/wFkAgUB5JAA
-        AxkB/wHLAYEBGQH/AbsBgQEZAf8BtgGBARkB/wG2AYEBGQH/Ae4B3AHEBf8BvgGBATYB/wG2AYEBGQH/
-        AbYBgQEZAf8BtgGBARkB/wG0AX4BGQH/AUkCAgGGDAADGQH/AhkB4AH/AhkB0gH/AhkBzgH/AkYB1gH/
-        AhkBzgH/AhkBzgH/AhkBzgH/AhwBzgH/AhkBzgH/AhkBzgH/AhkBzAH/AUkCAgGGiAABLAIBAUIB0AGG
-        ARkB/wHHAYEBGQH/AboBgQEZAf8BugGBARkB/wG6AYEBGQH/AdABnAFqBf8BugGBARkB/wG6AYEBGQH/
-        AboBgQEZAf8BugGBARkB/wG2AYEBGQH/AW0BSAEZAf8IAAEsAgEBQgIZAeQB/wIZAdwB/wIZAdIB/wKf
-        Ae0F/wJfAd4B/wIZAdIB/wL0Af0F/wIcAdIB/wIZAdIB/wIZAc4B/wIZAXgB/4gAAxkB/wHSAYkBGQH/
-        Ab8BgQEZAf8BvwGBARkB/wG/AYEBGQH/Ab8BgQEZAf8B0wGfAWoF/wG/AYEBGQH/Ab8BgQEZAf8BvwGB
-        ARkB/wG/AYEBGQH/Ab4BgQEZAf8BtgGBARkB/wE2AgEBVwQAAxkB/wIZAeUB/wIZAdYB/wIZAdYN/wL1
-        Af0J/wLiAfoB/wIZAdYB/wIZAdUB/wIZAc4B/wE2AgEBV4QAAWEBSQEZAf8B1AGMARkB/wHEAYEBGQH/
-        AcQBgQEZAf8BxAGBARkB/wHEAYEBGQH/AdcBpAFrBf8BxAGBARkB/wHEAYEBGQH/AcQBgQEZAf8BxAGB
-        ARkB/wHEAYEBGQH/AbgBgQEZAf8BZQIHAewEAAIZAWcB/wIZAegB/wIZAdoB/wIZAdoB/wIZAdoR/wLi
-        AfoB/wIZAdoB/wIZAdoB/wIZAdoB/wIZAdAB/wFlAgcB7IQAAYEBXgEZAf8B1wGOARkB/wHJAYEBGQH/
-        AckBgQEZAf8ByQGBARkB/wHJAYEBGQn/AckBgQEZAf8ByQGBARkB/wHJAYEBGQH/AckBgQEZAf8ByQGB
-        ARkB/wG6AYEBGQH/AxkB/wQAAhkBgQH/AhkB6QH/AhkB3gH/AhkB3gH/AhkB3gH/AvQB/Q3/Al8B5wH/
-        AhkB3gH/AhkB3gH/AhkB3gH/AhkB0gH/AxkB/4QAAXEBTwEZAf8B2QGRARkB/wHOAYMBGQH/Ac4BgwEZ
-        Af8BzgGDARkB/wHOAYMBGQH/Ac4BgwEZAf8B1wGcAUoB/wHOAYMBGQH/Ac4BgwEZAf8BzgGDARkB/wHO
-        AYMBGQH/Ac4BgwEZAf8BvQGBARkB/wFJAhMB+QQAARkBHgFwAf8CGQHsAf8CGQHiAf8CGQHiAf8C9AH9
-        Ff8CXwHqAf8CGQHiAf8CGQHiAf8CGQHUAf8BSQITAfmEAAEcARoBGQH/AdsBlAEZAf8B0gGJARkB/wHS
-        AYkBGQH/AdIBiQEZAf8B0gGJARkB/wHSAYkBGQH/AesBywGQAf8B0gGJARkB/wHSAYkBGQH/AdIBiQEZ
-        Af8B0gGJARkB/wHEAYEBGQH/Ab8BgQEZAf8BUQICAZsEAAIZARwB/wIZAe0B/wIZAeYB/wIZAeUB/wL9
-        Af4F/wLiAfwB/wIZAeUJ/wKBAfEB/wIZAeUB/wIZAdoB/wIZAdYB/wFRAgIBm4QAAVgCAgGyAd4BmAEZ
-        Af8B2wGUARkB/wHXAY4BGQH/AdcBjgEZAf8B1wGOARkB/wH7AfYB6wX/AdcBjgEZAf8B1wGOARkB/wHX
-        AY4BGQH/AdYBjQEZAf8BxAGBARkB/wGpAXoBGQH/CAABWAICAbIBGQEjAe8B/wIZAe0B/wIZAekB/wIZ
-        AekB/wLhAfwB/wIZAekB/wIZAekB/wIZAekB/wKBAfMB/wIZAekB/wIZAegB/wIZAdoB/wEZASEBnQH/
-        jAABUwE4ARkB/wHdAZcBGQH/AdsBlAEZAf8B2wGUARkB/wHbAZQBGQH/AdsBlAEZAf8B3AGXAR8B/wHb
-        AZQBGQH/AdsBlAEZAf8B1QGMARkB/wHJAYEBGQH/AdEBiAEZAf8BLAIZAfwMAAIZAU0B/wIZAe8B/wIZ
-        Ae0B/wIZAe0B/wIZAe0B/wIZAe0B/wIZAe0B/wIZAe0B/wIZAe0B/wIZAegB/wIZAd4B/wEZASwB4gH/
-        ASwCGQH8jAABGQIBASEBkAFtARkB/wHfAZkBGQH/AdsBlAEZAf8B2QGRARkB/wHYAZABGQH/AdgBkAEZ
-        Af8B0wGKARkB/wHQAYYBGQH/Ac4BgwEZAf8B2gGSARkB/wEkAR8BGQH/EAABGQIBASECGQGHAf8BGQEf
-        AfEB/wIZAe0B/wIZAewB/wIZAesB/wIZAesB/wIZAeYB/wIZAeQB/wIZAeIB/wEZATYB5gH/AhkBIwH/
-        lAABEgIBARYBPgEwARkB/wHSAYkBGQH/AeIBnQEZAf8B2QGRARkB/wHXAY4BGQH/AdUBjAEZAf8B4QGb
-        ARkB/wHOAYQBGQH/ATICGQH+GAABEgIBARYCGQE9Af8BGQEfAdMB/wEZATAB9AH/AhkB7AH/AhkB6QH/
-        ARkBGgHoAf8BGQE4AfAB/wIZAcwB/wEyAhkB/qAAAUYCAQF9AxkB/wFqAVEBGQH/AYEBagEZAf8BSwE8
-        ARkB/wEyAhkB/gEUAgEBGiQAAUYCAQF9AxkB/wIZAW0B/wIZAYEB/wIZAU0B/wEyAhkB/gEUAgEBGv8A
+        AwABEAMAAQEBAAEgBgABECoAAUMCAQF0AWYCCQHxAx0B/wFiAgMB1AEgAgEBLCwAAUMCAQF0AWYCCQHx
+        Ax0B/wFiAgMB1AEgAgEBLKQAAWACCgHyAZMBdwEdAf8BvwGBAR0B/wG9AYEBHQH/AboBgQEdAf8BuAGB
+        AR0B/wG2AYEBHQH/AVEBOgEdAf8BPQIBAWUcAAFgAgoB8gIdAaQB/wIdAdYB/wIdAdQB/wIdAdIB/wId
+        AdAB/wIdAc4B/wIdAVgB/wE9AgEBZZgAAScBIwEdAf8BxwGBAR0B/wHDAYEBHQH/AbEBfwEdAf8BsQF/
+        AR0B/wGxAX8BHQH/AbEBfwEdAf8BswGBAR0B/wG2AYEBHQH/AbQBgQEdAf8BZAIFAeQUAAIdASgB/wId
+        AdwB/wIdAdkB/wIdAcoB/wIdAcoB/wIdAcoB/wIdAcoB/wIdAcsB/wIdAc4B/wIdAcwB/wFkAgUB5JAA
+        Ax0B/wHLAYEBHQH/AbsBgQEdAf8BtgGBAR0B/wG2AYEBHQH/Ae4B3AHEBf8BvgGBAToB/wG2AYEBHQH/
+        AbYBgQEdAf8BtgGBAR0B/wG0AYEBHQH/AUkCAgGGDAADHQH/Ah0B4AH/Ah0B0gH/Ah0BzgH/AkoB1gH/
+        Ah0BzgH/Ah0BzgH/Ah0BzgH/AiABzgH/Ah0BzgH/Ah0BzgH/Ah0BzAH/AUkCAgGGiAABLAIBAUIB0AGG
+        AR0B/wHHAYEBHQH/AboBgQEdAf8BugGBAR0B/wG6AYEBHQH/AdABnAFuBf8BugGBAR0B/wG6AYEBHQH/
+        AboBgQEdAf8BugGBAR0B/wG2AYEBHQH/AXEBTAEdAf8IAAEsAgEBQgIdAeQB/wIdAdwB/wIdAdIB/wKf
+        Ae0F/wJjAd4B/wIdAdIB/wL0Af0F/wIgAdIB/wIdAdIB/wIdAc4B/wIdAXwB/4gAAx0B/wHSAYkBHQH/
+        Ab8BgQEdAf8BvwGBAR0B/wG/AYEBHQH/Ab8BgQEdAf8B0wGfAW4F/wG/AYEBHQH/Ab8BgQEdAf8BvwGB
+        AR0B/wG/AYEBHQH/Ab4BgQEdAf8BtgGBAR0B/wE2AgEBVwQAAx0B/wIdAeUB/wIdAdYB/wIdAdYN/wL1
+        Af0J/wLiAfoB/wIdAdYB/wIdAdUB/wIdAc4B/wE2AgEBV4QAAWUBTQEdAf8B1AGMAR0B/wHEAYEBHQH/
+        AcQBgQEdAf8BxAGBAR0B/wHEAYEBHQH/AdcBpAFvBf8BxAGBAR0B/wHEAYEBHQH/AcQBgQEdAf8BxAGB
+        AR0B/wHEAYEBHQH/AbgBgQEdAf8BZQIHAewEAAIdAWsB/wIdAegB/wIdAdoB/wIdAdoB/wIdAdoR/wLi
+        AfoB/wIdAdoB/wIdAdoB/wIdAdoB/wIdAdAB/wFlAgcB7IQAAYEBYgEdAf8B1wGOAR0B/wHJAYEBHQH/
+        AckBgQEdAf8ByQGBAR0B/wHJAYEBHQn/AckBgQEdAf8ByQGBAR0B/wHJAYEBHQH/AckBgQEdAf8ByQGB
+        AR0B/wG6AYEBHQH/Ax0B/wQAAh0BgQH/Ah0B6QH/Ah0B3gH/Ah0B3gH/Ah0B3gH/AvQB/Q3/AmMB5wH/
+        Ah0B3gH/Ah0B3gH/Ah0B3gH/Ah0B0gH/Ax0B/4QAAXUBUwEdAf8B2QGRAR0B/wHOAYMBHQH/Ac4BgwEd
+        Af8BzgGDAR0B/wHOAYMBHQH/Ac4BgwEdAf8B1wGcAU4B/wHOAYMBHQH/Ac4BgwEdAf8BzgGDAR0B/wHO
+        AYMBHQH/Ac4BgwEdAf8BvQGBAR0B/wFNAhMB+QQAAR0BIgF0Af8CHQHsAf8CHQHiAf8CHQHiAf8C9AH9
+        Ff8CYwHqAf8CHQHiAf8CHQHiAf8CHQHUAf8BTQITAfmEAAEgAR4BHQH/AdsBlAEdAf8B0gGJAR0B/wHS
+        AYkBHQH/AdIBiQEdAf8B0gGJAR0B/wHSAYkBHQH/AesBywGQAf8B0gGJAR0B/wHSAYkBHQH/AdIBiQEd
+        Af8B0gGJAR0B/wHEAYEBHQH/Ab8BgQEdAf8BUQICAZsEAAIdASAB/wIdAe0B/wIdAeYB/wIdAeUB/wL9
+        Af4F/wLiAfwB/wIdAeUJ/wKBAfEB/wIdAeUB/wIdAdoB/wIdAdYB/wFRAgIBm4QAAVgCAgGyAd4BmAEd
+        Af8B2wGUAR0B/wHXAY4BHQH/AdcBjgEdAf8B1wGOAR0B/wH7AfYB6wX/AdcBjgEdAf8B1wGOAR0B/wHX
+        AY4BHQH/AdYBjQEdAf8BxAGBAR0B/wGpAX4BHQH/CAABWAICAbIBHQEnAe8B/wIdAe0B/wIdAekB/wId
+        AekB/wLhAfwB/wIdAekB/wIdAekB/wIdAekB/wKBAfMB/wIdAekB/wIdAegB/wIdAdoB/wEdASUBnQH/
+        jAABVwE8AR0B/wHdAZcBHQH/AdsBlAEdAf8B2wGUAR0B/wHbAZQBHQH/AdsBlAEdAf8B3AGXASMB/wHb
+        AZQBHQH/AdsBlAEdAf8B1QGMAR0B/wHJAYEBHQH/AdEBiAEdAf8BLAIdAfwMAAIdAVEB/wIdAe8B/wId
+        Ae0B/wIdAe0B/wIdAe0B/wIdAe0B/wIdAe0B/wIdAe0B/wIdAe0B/wIdAegB/wIdAd4B/wEdATAB4gH/
+        ASwCHQH8jAABGQIBASEBkAFxAR0B/wHfAZkBHQH/AdsBlAEdAf8B2QGRAR0B/wHYAZABHQH/AdgBkAEd
+        Af8B0wGKAR0B/wHQAYYBHQH/Ac4BgwEdAf8B2gGSAR0B/wEoASMBHQH/EAABGQIBASECHQGHAf8BHQEj
+        AfEB/wIdAe0B/wIdAewB/wIdAesB/wIdAesB/wIdAeYB/wIdAeQB/wIdAeIB/wEdAToB5gH/Ah0BJwH/
+        lAABEgIBARYBQgE0AR0B/wHSAYkBHQH/AeIBnQEdAf8B2QGRAR0B/wHXAY4BHQH/AdUBjAEdAf8B4QGb
+        AR0B/wHOAYQBHQH/AToCHQH+GAABEgIBARYCHQFBAf8BHQEjAdMB/wEdATQB9AH/Ah0B7AH/Ah0B6QH/
+        AR0BHgHoAf8BHQE8AfAB/wIdAcwB/wE6Ah0B/qAAAUYCAQF9Ax0B/wFuAVUBHQH/AYEBbgEdAf8BTwFA
+        AR0B/wE6Ah0B/gEUAgEBGiQAAUYCAQF9Ax0B/wIdAXEB/wIdAYEB/wIdAVEB/wE6Ah0B/gEUAgEBGv8A
         kQABQgFNAT4HAAE+AwABKAMAAUADAAEQAwABAQEAAQEFAAGAFwAD/wEAAfwBHwH8AR8EAAHwAQcB8AEH
         BAAB4AEDAeABAwQAAcABAQHAAQEEAAGAAQEBgAEBBAABgAEAAYAFAAGAAQABgAUAAYABAAGABQABgAEA
         AYAFAAGAAQABgAUAAYABAQGAAQEEAAHAAQEBwAEBBAABwAEDAcABAwQAAeABBwHgAQcEAAH4AQ8B+AEP
@@ -174,5 +174,8 @@
   </data>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>46</value>
+  </metadata>
+  <metadata name="$this.Locked" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
   </metadata>
 </root>
