added recurring appoinment (#468)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@1511 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Hive.Client.Console/HiveClientConsole.resx
+++ b/sources/HeuristicLab.Hive.Client.Console/HiveClientConsole.resx
@@ -124,52 +124,52 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj0yLjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABS
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABQ
         CgAAAk1TRnQBSQFMAgEBAgEAAQQBAAEEAQABEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
-        AwABEAMAAQEBAAEgBgABECoAAUMCAQF0AWYCCQHxAx0B/wFiAgMB1AEgAgEBLCwAAUMCAQF0AWYCCQHx
-        Ax0B/wFiAgMB1AEgAgEBLKQAAWACCgHyAZMBdwEdAf8BvwGBAR0B/wG9AYEBHQH/AboBgQEdAf8BuAGB
-        AR0B/wG2AYEBHQH/AVEBOgEdAf8BPQIBAWUcAAFgAgoB8gIdAaQB/wIdAdYB/wIdAdQB/wIdAdIB/wId
-        AdAB/wIdAc4B/wIdAVgB/wE9AgEBZZgAAScBIwEdAf8BxwGBAR0B/wHDAYEBHQH/AbEBfwEdAf8BsQF/
-        AR0B/wGxAX8BHQH/AbEBfwEdAf8BswGBAR0B/wG2AYEBHQH/AbQBgQEdAf8BZAIFAeQUAAIdASgB/wId
-        AdwB/wIdAdkB/wIdAcoB/wIdAcoB/wIdAcoB/wIdAcoB/wIdAcsB/wIdAc4B/wIdAcwB/wFkAgUB5JAA
-        Ax0B/wHLAYEBHQH/AbsBgQEdAf8BtgGBAR0B/wG2AYEBHQH/Ae4B3AHEBf8BvgGBAToB/wG2AYEBHQH/
-        AbYBgQEdAf8BtgGBAR0B/wG0AYEBHQH/AUkCAgGGDAADHQH/Ah0B4AH/Ah0B0gH/Ah0BzgH/AkoB1gH/
-        Ah0BzgH/Ah0BzgH/Ah0BzgH/AiABzgH/Ah0BzgH/Ah0BzgH/Ah0BzAH/AUkCAgGGiAABLAIBAUIB0AGG
-        AR0B/wHHAYEBHQH/AboBgQEdAf8BugGBAR0B/wG6AYEBHQH/AdABnAFuBf8BugGBAR0B/wG6AYEBHQH/
-        AboBgQEdAf8BugGBAR0B/wG2AYEBHQH/AXEBTAEdAf8IAAEsAgEBQgIdAeQB/wIdAdwB/wIdAdIB/wKf
-        Ae0F/wJjAd4B/wIdAdIB/wL0Af0F/wIgAdIB/wIdAdIB/wIdAc4B/wIdAXwB/4gAAx0B/wHSAYkBHQH/
-        Ab8BgQEdAf8BvwGBAR0B/wG/AYEBHQH/Ab8BgQEdAf8B0wGfAW4F/wG/AYEBHQH/Ab8BgQEdAf8BvwGB
-        AR0B/wG/AYEBHQH/Ab4BgQEdAf8BtgGBAR0B/wE2AgEBVwQAAx0B/wIdAeUB/wIdAdYB/wIdAdYN/wL1
-        Af0J/wLiAfoB/wIdAdYB/wIdAdUB/wIdAc4B/wE2AgEBV4QAAWUBTQEdAf8B1AGMAR0B/wHEAYEBHQH/
-        AcQBgQEdAf8BxAGBAR0B/wHEAYEBHQH/AdcBpAFvBf8BxAGBAR0B/wHEAYEBHQH/AcQBgQEdAf8BxAGB
-        AR0B/wHEAYEBHQH/AbgBgQEdAf8BZQIHAewEAAIdAWsB/wIdAegB/wIdAdoB/wIdAdoB/wIdAdoR/wLi
-        AfoB/wIdAdoB/wIdAdoB/wIdAdoB/wIdAdAB/wFlAgcB7IQAAYEBYgEdAf8B1wGOAR0B/wHJAYEBHQH/
-        AckBgQEdAf8ByQGBAR0B/wHJAYEBHQn/AckBgQEdAf8ByQGBAR0B/wHJAYEBHQH/AckBgQEdAf8ByQGB
-        AR0B/wG6AYEBHQH/Ax0B/wQAAh0BgQH/Ah0B6QH/Ah0B3gH/Ah0B3gH/Ah0B3gH/AvQB/Q3/AmMB5wH/
-        Ah0B3gH/Ah0B3gH/Ah0B3gH/Ah0B0gH/Ax0B/4QAAXUBUwEdAf8B2QGRAR0B/wHOAYMBHQH/Ac4BgwEd
-        Af8BzgGDAR0B/wHOAYMBHQH/Ac4BgwEdAf8B1wGcAU4B/wHOAYMBHQH/Ac4BgwEdAf8BzgGDAR0B/wHO
-        AYMBHQH/Ac4BgwEdAf8BvQGBAR0B/wFNAhMB+QQAAR0BIgF0Af8CHQHsAf8CHQHiAf8CHQHiAf8C9AH9
-        Ff8CYwHqAf8CHQHiAf8CHQHiAf8CHQHUAf8BTQITAfmEAAEgAR4BHQH/AdsBlAEdAf8B0gGJAR0B/wHS
-        AYkBHQH/AdIBiQEdAf8B0gGJAR0B/wHSAYkBHQH/AesBywGQAf8B0gGJAR0B/wHSAYkBHQH/AdIBiQEd
-        Af8B0gGJAR0B/wHEAYEBHQH/Ab8BgQEdAf8BUQICAZsEAAIdASAB/wIdAe0B/wIdAeYB/wIdAeUB/wL9
-        Af4F/wLiAfwB/wIdAeUJ/wKBAfEB/wIdAeUB/wIdAdoB/wIdAdYB/wFRAgIBm4QAAVgCAgGyAd4BmAEd
-        Af8B2wGUAR0B/wHXAY4BHQH/AdcBjgEdAf8B1wGOAR0B/wH7AfYB6wX/AdcBjgEdAf8B1wGOAR0B/wHX
-        AY4BHQH/AdYBjQEdAf8BxAGBAR0B/wGpAX4BHQH/CAABWAICAbIBHQEnAe8B/wIdAe0B/wIdAekB/wId
-        AekB/wLhAfwB/wIdAekB/wIdAekB/wIdAekB/wKBAfMB/wIdAekB/wIdAegB/wIdAdoB/wEdASUBnQH/
-        jAABVwE8AR0B/wHdAZcBHQH/AdsBlAEdAf8B2wGUAR0B/wHbAZQBHQH/AdsBlAEdAf8B3AGXASMB/wHb
-        AZQBHQH/AdsBlAEdAf8B1QGMAR0B/wHJAYEBHQH/AdEBiAEdAf8BLAIdAfwMAAIdAVEB/wIdAe8B/wId
-        Ae0B/wIdAe0B/wIdAe0B/wIdAe0B/wIdAe0B/wIdAe0B/wIdAe0B/wIdAegB/wIdAd4B/wEdATAB4gH/
-        ASwCHQH8jAABGQIBASEBkAFxAR0B/wHfAZkBHQH/AdsBlAEdAf8B2QGRAR0B/wHYAZABHQH/AdgBkAEd
-        Af8B0wGKAR0B/wHQAYYBHQH/Ac4BgwEdAf8B2gGSAR0B/wEoASMBHQH/EAABGQIBASECHQGHAf8BHQEj
-        AfEB/wIdAe0B/wIdAewB/wIdAesB/wIdAesB/wIdAeYB/wIdAeQB/wIdAeIB/wEdAToB5gH/Ah0BJwH/
-        lAABEgIBARYBQgE0AR0B/wHSAYkBHQH/AeIBnQEdAf8B2QGRAR0B/wHXAY4BHQH/AdUBjAEdAf8B4QGb
-        AR0B/wHOAYQBHQH/AToCHQH+GAABEgIBARYCHQFBAf8BHQEjAdMB/wEdATQB9AH/Ah0B7AH/Ah0B6QH/
-        AR0BHgHoAf8BHQE8AfAB/wIdAcwB/wE6Ah0B/qAAAUYCAQF9Ax0B/wFuAVUBHQH/AYEBbgEdAf8BTwFA
-        AR0B/wE6Ah0B/gEUAgEBGiQAAUYCAQF9Ax0B/wIdAXEB/wIdAYEB/wIdAVEB/wE6Ah0B/gEUAgEBGv8A
-        kQABQgFNAT4HAAE+AwABKAMAAUADAAEQAwABAQEAAQEFAAGAFwAD/wEAAfwBHwH8AR8EAAHwAQcB8AEH
-        BAAB4AEDAeABAwQAAcABAQHAAQEEAAGAAQEBgAEBBAABgAEAAYAFAAGAAQABgAUAAYABAAGABQABgAEA
-        AYAFAAGAAQABgAUAAYABAQGAAQEEAAHAAQEBwAEBBAABwAEDAcABAwQAAeABBwHgAQcEAAH4AQ8B+AEP
-        BAAE/wQACw==
+        AwABEAMAAQEBAAEgBgABECoAAUMCAQF0AWYCCQHxAyEB/wFiAgMB1AEgAgEBLCwAAUMCAQF0AWYCCQHx
+        AyEB/wFiAgMB1AEgAgEBLKQAAWACCgHyAZMBewEhAf8BvwGBASEB/wG9AYEBIQH/AboBgQEhAf8BuAGB
+        ASEB/wG2AYEBIQH/AVUBPgEhAf8BPQIBAWUcAAFgAgoB8gIhAaQB/wIhAdYB/wIhAdQB/wIhAdIB/wIh
+        AdAB/wIhAc4B/wIhAVwB/wE9AgEBZZgAASsBJwEhAf8BxwGBASEB/wHDAYEBIQH/AbEBgQEhAf8BsQGB
+        ASEB/wGxAYEBIQH/AbEBgQEhAf8BswGBASEB/wG2AYEBIQH/AbQBgQEhAf8BZAIFAeQUAAIhASwB/wIh
+        AdwB/wIhAdkB/wIhAcoB/wIhAcoB/wIhAcoB/wIhAcoB/wIhAcsB/wIhAc4B/wIhAcwB/wFkAgUB5JAA
+        AyEB/wHLAYEBIQH/AbsBgQEhAf8BtgGBASEB/wG2AYEBIQH/Ae4B3AHEBf8BvgGBAT4B/wG2AYEBIQH/
+        AbYBgQEhAf8BtgGBASEB/wG0AYEBIQH/AUkCAgGGDAADIQH/AiEB4AH/AiEB0gH/AiEBzgH/Ak4B1gH/
+        AiEBzgH/AiEBzgH/AiEBzgH/AiQBzgH/AiEBzgH/AiEBzgH/AiEBzAH/AUkCAgGGiAABLAIBAUIB0AGG
+        ASEB/wHHAYEBIQH/AboBgQEhAf8BugGBASEB/wG6AYEBIQH/AdABnAFyBf8BugGBASEB/wG6AYEBIQH/
+        AboBgQEhAf8BugGBASEB/wG2AYEBIQH/AXUBUAEhAf8IAAEsAgEBQgIhAeQB/wIhAdwB/wIhAdIB/wKf
+        Ae0F/wJnAd4B/wIhAdIB/wL0Af0F/wIkAdIB/wIhAdIB/wIhAc4B/wIhAYAB/4gAAyEB/wHSAYkBIQH/
+        Ab8BgQEhAf8BvwGBASEB/wG/AYEBIQH/Ab8BgQEhAf8B0wGfAXIF/wG/AYEBIQH/Ab8BgQEhAf8BvwGB
+        ASEB/wG/AYEBIQH/Ab4BgQEhAf8BtgGBASEB/wE2AgEBVwQAAyEB/wIhAeUB/wIhAdYB/wIhAdYN/wL1
+        Af0J/wLiAfoB/wIhAdYB/wIhAdUB/wIhAc4B/wE2AgEBV4QAAWkBUQEhAf8B1AGMASEB/wHEAYEBIQH/
+        AcQBgQEhAf8BxAGBASEB/wHEAYEBIQH/AdcBpAFzBf8BxAGBASEB/wHEAYEBIQH/AcQBgQEhAf8BxAGB
+        ASEB/wHEAYEBIQH/AbgBgQEhAf8BZQIHAewEAAIhAW8B/wIhAegB/wIhAdoB/wIhAdoB/wIhAdoR/wLi
+        AfoB/wIhAdoB/wIhAdoB/wIhAdoB/wIhAdAB/wFlAgcB7IQAAYEBZgEhAf8B1wGOASEB/wHJAYEBIQH/
+        AckBgQEhAf8ByQGBASEB/wHJAYEBIQn/AckBgQEhAf8ByQGBASEB/wHJAYEBIQH/AckBgQEhAf8ByQGB
+        ASEB/wG6AYEBIQH/AyEB/wQAAiEBgQH/AiEB6QH/AiEB3gH/AiEB3gH/AiEB3gH/AvQB/Q3/AmcB5wH/
+        AiEB3gH/AiEB3gH/AiEB3gH/AiEB0gH/AyEB/4QAAXkBVwEhAf8B2QGRASEB/wHOAYMBIQH/Ac4BgwEh
+        Af8BzgGDASEB/wHOAYMBIQH/Ac4BgwEhAf8B1wGcAVIB/wHOAYMBIQH/Ac4BgwEhAf8BzgGDASEB/wHO
+        AYMBIQH/Ac4BgwEhAf8BvQGBASEB/wFRAhMB+QQAASEBJgF4Af8CIQHsAf8CIQHiAf8CIQHiAf8C9AH9
+        Ff8CZwHqAf8CIQHiAf8CIQHiAf8CIQHUAf8BUQITAfmEAAEkASIBIQH/AdsBlAEhAf8B0gGJASEB/wHS
+        AYkBIQH/AdIBiQEhAf8B0gGJASEB/wHSAYkBIQH/AesBywGQAf8B0gGJASEB/wHSAYkBIQH/AdIBiQEh
+        Af8B0gGJASEB/wHEAYEBIQH/Ab8BgQEhAf8BUQICAZsEAAIhASQB/wIhAe0B/wIhAeYB/wIhAeUB/wL9
+        Af4F/wLiAfwB/wIhAeUJ/wKBAfEB/wIhAeUB/wIhAdoB/wIhAdYB/wFRAgIBm4QAAVgCAgGyAd4BmAEh
+        Af8B2wGUASEB/wHXAY4BIQH/AdcBjgEhAf8B1wGOASEB/wH7AfYB6wX/AdcBjgEhAf8B1wGOASEB/wHX
+        AY4BIQH/AdYBjQEhAf8BxAGBASEB/wGpAYEBIQH/CAABWAICAbIBIQErAe8B/wIhAe0B/wIhAekB/wIh
+        AekB/wLhAfwB/wIhAekB/wIhAekB/wIhAekB/wKBAfMB/wIhAekB/wIhAegB/wIhAdoB/wEhASkBnQH/
+        jAABWwFAASEB/wHdAZcBIQH/AdsBlAEhAf8B2wGUASEB/wHbAZQBIQH/AdsBlAEhAf8B3AGXAScB/wHb
+        AZQBIQH/AdsBlAEhAf8B1QGMASEB/wHJAYEBIQH/AdEBiAEhAf8BLAIhAfwMAAIhAVUB/wIhAe8B/wIh
+        Ae0B/wIhAe0B/wIhAe0B/wIhAe0B/wIhAe0B/wIhAe0B/wIhAe0B/wIhAegB/wIhAd4B/wEhATQB4gH/
+        ASwCIQH8jAABGQIBASEBkAF1ASEB/wHfAZkBIQH/AdsBlAEhAf8B2QGRASEB/wHYAZABIQH/AdgBkAEh
+        Af8B0wGKASEB/wHQAYYBIQH/Ac4BgwEhAf8B2gGSASEB/wEsAScBIQH/EAABGQIBAyEBhwH/ASEBJwHx
+        Af8CIQHtAf8CIQHsAf8CIQHrAf8CIQHrAf8CIQHmAf8CIQHkAf8CIQHiAf8BIQE+AeYB/wIhASsB/5QA
+        ARICAQEWAUYBOAEhAf8B0gGJASEB/wHiAZ0BIQH/AdkBkQEhAf8B1wGOASEB/wHVAYwBIQH/AeEBmwEh
+        Af8BzgGEASEB/wFBAiEB/hgAARICAQEWAiEBRQH/ASEBJwHTAf8BIQE4AfQB/wIhAewB/wIhAekB/wEh
+        ASIB6AH/ASEBQAHwAf8CIQHMAf8BQQIhAf6gAAFGAgEBfQMhAf8BcgFZASEB/wGBAXIBIQH/AVMBRAEh
+        Af8BQQIhAf4BFAIBARokAAFGAgEBfQMhAf8CIQF1Af8CIQGBAf8CIQFVAf8BQQIhAf4BFAIBARr/AJEA
+        AUIBTQE+BwABPgMAASgDAAFAAwABEAMAAQEBAAEBBQABgBcAA/8BAAH8AR8B/AEfBAAB8AEHAfABBwQA
+        AeABAwHgAQMEAAHAAQEBwAEBBAABgAEBAYABAQQAAYABAAGABQABgAEAAYAFAAGAAQABgAUAAYABAAGA
+        BQABgAEAAYAFAAGAAQEBgAEBBAABwAEBAcABAQQAAcABAwHAAQMEAAHgAQcB4AEHBAAB+AEPAfgBDwQA
+        BP8EAAs=
 </value>
   </data>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
