implemented request snapshot and abort job (##587)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@1598 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Hive.Server.Console/3.2/HiveServerManagementConsole.resx
+++ b/sources/HeuristicLab.Hive.Server.Console/3.2/HiveServerManagementConsole.resx
@@ -348,7 +348,10 @@
   <metadata name="fileSystemWatcher1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>580, 13</value>
   </metadata>
+  <metadata name="contextMenuJob.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>730, 13</value>
+  </metadata>
   <metadata name="updaterWoker.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 50</value>
+    <value>862, 13</value>
   </metadata>
 </root>
